Fix focus outline overlapping with text in preview toggle
Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559254&signed_aid=rvkADyGUDoXICQ7FGyyqaA==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559255&signed_aid=3U5tBrDAx3fETmI2O_BeLA==&inline=1

Bug: 1337702
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3714170
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/panel_feedback/previewToggle.css
+++ b/front_end/ui/components/panel_feedback/previewToggle.css
@@ -33,6 +33,12 @@
   padding: 4px;
 }
 
+.container.has-link {
+  /* For x-link outline not to paint over the helper text
+  we need to have 2 * <padding>px additional line height */
+  line-height: calc(1em + 8px);
+}
+
 .x-link {
   color: var(--color-primary);
   text-decoration-line: underline;
